Add Promise example

--- a/02-promise.html
+++ b/02-promise.html
@@ -23,12 +23,17 @@ $('#clickme').click(function(){
     }
   );
 
+  /* 
+
+  // Question: What would happen if we did this too....
+
   promise.done(
-     function(data) {
+    function(data) {
       console.log('Second Callback');
     }
-    );
-
+  );
+  
+  */
 });
 
 </script>
