--- a/04-promise-no-var.html
+++ b/04-promise-no-var.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<div>This Page skips declaring a promise variable</div>
+<div>This Page skips declaring a promise variable and uses method chaining</div>
 
 <button id="clickme">Click Me</button>
 
